--- a/src/index.css
+++ b/src/index.css
@@ -12,55 +12,48 @@
   --spinner-animation-speed: 2s;
 }
 
-body {
+@keyframes spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+.spinner {
+  animation: spin var(--spinner-animation-speed) linear infinite;
+}
+
+.card-saving{
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+body{
   padding: 0;
   margin: 0;
 }
 
-#app {
-  background-color: #212228;
-  background-image: linear-gradient(#292a30 0.1em, transparent 0.1em),
-      linear-gradient(90deg, #292a30 0.1em, transparent 0.1em);
+#app{
+  background-color:#212228;
+  background-image: linear-gradient(#292a30 .1em, transparent .1em), linear-gradient(90deg, #292a30 .1em, transparent .1em);
   background-size: 4em 4em;
   height: 100vh;
-  position: relative;
+  position:relative;
   overflow: auto;
 }
 
-
-.card {
+.card{
   width: 400px;
   border-radius: 5px;
   cursor: pointer;
-  box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075), 0 2px 2px hsl(0deg 0% 0% /
-                  0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075), 0 8px 8px hsl(0deg
-                  0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075);
   position: absolute;
-
+  box-shadow:
+  0 1px 1px hsl(0deg 0% 0% / 0.075),
+  0 2px 2px hsl(0deg 0% 0% / 0.075),
+  0 4px 4px hsl(0deg 0% 0% / 0.075),
+  0 8px 8px hsl(0deg 0% 0% / 0.075),
+  0 16px 16px hsl(0deg 0% 0% / 0.075)
+;
 }
-
-
-.card-body {
-  padding: 1em;
-  border-radius: 0 0 5px 5px;
-}
-
-.card-body textarea {
-  background-color: inherit;
-  border: none;
-  width: 100%;
-  height: 100%;
-  resize: none;
-  font-size: 16px;
-}
-
-textarea:focus {
-  background-color: inherit;
-  outline: none;
-  width: 100%;
-  height: 100%;
-}
-
 
 .card-header {
   background-color: #9bd1de;
@@ -71,46 +64,58 @@ textarea:focus {
   padding: 5px;
 }
 
-@keyframes spin {
-  from {
-      transform: rotate(0deg);
-  }
-  to {
-      transform: rotate(360deg);
-  }
+.card-body{
+  padding: 1em;
+  border-radius: 0 0 5px 5px;
+
 }
 
-.spinner {
-  animation: spin var(--spinner-animation-speed) linear infinite;
+.card-body textarea{
+  background-color: inherit;
+  border: none;
+  width: 100%;
+  height: 100%;
+  resize: none;
+  font-size: 16px;
 }
 
-.card-saving {
-  display: flex;
-  align-items: center;
-  gap: 5px;
+
+
+
+textarea:focus{
+  background-color: inherit;
+  outline: none;
+  width: 100%;
+  height: 100%;
+
 }
 
-#controls {
+#controls{
   display: flex;
   flex-direction: column;
   gap: 1em;
   align-items: center;
   position: fixed;
-  left: 1em;
+  left:1em;
   top: 50%;
   transform: translateY(-50%);
   background-color: #35363e;
   padding: 1em 1em;
   border-radius: 40px;
 
-  box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075), 0 2px 2px hsl(0deg 0% 0% /
-                  0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075), 0 8px 8px hsl(0deg
-                  0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075);
-  z-index: 10000;
+  box-shadow:
+  0 1px 1px hsl(0deg 0% 0% / 0.075),
+  0 2px 2px hsl(0deg 0% 0% / 0.075),
+  0 4px 4px hsl(0deg 0% 0% / 0.075),
+  0 8px 8px hsl(0deg 0% 0% / 0.075),
+  0 16px 16px hsl(0deg 0% 0% / 0.075)
+;
+z-index: 10000;
 }
 
-#add-btn {
-  background-color: rgba(107, 107, 107, 1);
+
+#add-btn{
+  background-color: rgba(107,107,107,1);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -121,7 +126,22 @@ textarea:focus {
   transition: 0.3s;
 }
 
-#add-btn:hover {
+#add-btn:hover{
+  height: 45px;
+  width: 45px;
+}
+
+.color{
+
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.color:hover{
   height: 45px;
   width: 45px;
 }
